# metaprobe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  cache.py  config.py  database.py  dependencies.py  main.py  metrics.py  middleware.py
app/models/: analysis.py  schemas.py
app/repositories/: metadata_repo.py
app/routes/: analysis.py  metadata.py  websocket.py
app/services/: analyzer.py  background.py  collector.py
tests/: conftest.py  test_analysis_api.py  test_analyzer.py  test_api.py  test_bulk.py  test_collector.py  test_middleware.py  test_repository.py
